# ai-translator

./: .env  DOCUMENT_STYLE_EXTRACTION.md  MULTI_AGENT_REVIEW_REFACTOR.md  README.md  TMX_CLI_USAGE.md  TMX_INTEGRATION.md  TRANSLATION_TAB_IMPLEMENTATION_SUMMARY.md  cli.py  graph-visualization.md  graph.py  gui_main.py  main.py  pyproject.toml  requirements.txt  state.py  style.md  test_style_guide.md  test_tmx_cli.py  tmx_demo.py
.cursor/rules/: general-rules.mdc
.github/workflows/: ci.yml  nuitka.yml
data/: RWS-Riding-the-AI-Shockwave-Report-FINAL_tcm228-270950_style_guide.md  example_input.txt  glossary.csv  input.txt  rws-style.md  sample.tmx  style_guide.md
docs/: IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_TMX.md  MULTI_AGENT_REVIEW_REFACTOR.md
gui/: __init__.py  app.py  test_gui_framework.py
gui/components/: __init__.py  base_tab.py  error_handler.py  glossary_tab.py  resource_manager_tab.py  theme_manager.py  (+3 more)
nodes/: __init__.py  document_parsers.py  extract_glossary.py  extract_style.py  filter_glossary.py  human_review.py  review_agent.py  review_aggregator.py  review_glossary_faithfulness.py  review_grammar_correctness.py  review_style_adherence.py  review_tmx_faithfulness.py  review_translation.py  style_guide.py  tmx_loader.py  translate_content.py  utils.py
plans/: plan-initial-framework.md
tests/: test_document_style_extraction.py  test_filter_glossary.py  test_glossary_loading.py  test_graph_visualization.py  test_review_multi_agent.py  test_review_translation.py  test_style_extraction_gui.py  test_tmx_functionality.py  test_translate_content.py
(+8 files in other folders)
