[project]
name = "translation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langgraph",
    "langchain-openai",
    "python-dotenv",
    "langchain",
    "rapidfuzz",
    "rich",
    "matplotlib",
    "networkx",
    "pypdf",
    "python-docx",
    "nltk",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-mock"
]

[tool.pytest.ini_options]
pythonpath = "."
